# sf-client

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  license-check.yml  lint.yml  test.yml
src/: error.rs  lib.rs  util.rs
src/authenticator/: jwt.rs  mod.rs  session.rs
tests/: sandbox.rs
