[package]
name = "sf-client"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[features]
keep-alive = ["tokio"]

[dependencies]
async-trait = "0.1.68"
chrono = { version = "0.4.24", features = ["serde"] }
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1", optional = true, default-features = false, features = ["rt-multi-thread"] }
tracing = "0.1.37"
urlencoding = "2.1.3"

[dev-dependencies]
rand = "0.8.5"
rsa = "0.9.2"
tokio = { version = "1.28.1", features = ["full"] }
wiremock = "0.5.18"
