[package]
name = "sf-client"
version = "0.2.0"
edition = "2024"
license = "MPL-2.0"

[features]
keep-alive = ["tokio"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", optional = true, default-features = false, features = ["rt-multi-thread"] }
tracing = "0.1"
urlencoding = "2.1.3"

[dev-dependencies]
rsa = { version = "0.9", features = ["getrandom"] }
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
